fix navbar: hiding pc navigation on mobile

--- a/src/components/Layout/Navbar/UserInfo/UserInfo.module.scss
+++ b/src/components/Layout/Navbar/UserInfo/UserInfo.module.scss
@@ -18,7 +18,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
 
-  @include tabletS {
+  @include tabletM {
     width: 100%;
   }
 }
@@ -29,4 +29,5 @@
   display: grid;
   place-items: center;
   background-color: var(--secondary-bg);
+  justify-self: flex-end;
 }
